--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
             <button class="submit" type="submit">Submit</button>
-            <button class="cancel">cancel</button>
+            <button class="cancel" type="button">cancel</button>
 
         </form>
 
