--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Libary2.0</title>
 </head>
 <body>
-
     <header><h1>Libary</h1></header>
 
     
@@ -34,7 +33,7 @@
             <label for="title">Title</label>
             <input type="text" name="title" id="title" placeholder="Title" required>
 
-            <label for="author">Title</label>
+            <label for="author">Auther</label>
             <input type="text" name="author" id="author" placeholder="Author" required>
 
             <label for="numPages">Pages</label>
